# agentos

./: .env.example  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  PLAN.md  README.md  SPEC.md  WebUI链接.txt  app.py  demo.py  main.py  opencode.json  pyproject.toml  requirements.txt
.github/workflows/: unit-test.yml
agentos/core/: action.py  agent.py  loop.py
agentos/feedback/: controller.py  extractor.py
agentos/guardrail/: engine.py  rules.py
agentos/llm/: interface.py  real.py
agentos/tools/: execute_test.py  toolbox.py
core/: state.py
docker/: Dockerfile  entrypoint.sh
docs/: PLAN.md  REFLECTION.md  SPEC_PROCESS.md
feedback/: extractor.py
llm/: mock.py
security/: credentials.py
tests/: test_agent_loop.py  test_feedback_controller.py  test_guardrail_rules.py  test_mock_llm.py  test_real_llm.py  test_state.py  test_tools.py
tools/: read_file.py  toolbox.py  write_file.py
